--- a/dev/styles/index.css
+++ b/dev/styles/index.css
@@ -10,6 +10,42 @@
 	margin-right: 0px;
 }
 
+.LoaderN {
+	background-color: rgba(0, 0, 0, 0.1);
+	position: absolute;
+	z-index: 10;
+    right:0%;
+	/* display: none; */
+}
+
+.LoaderN p {
+    padding: 40px 40px;
+	background-color: rgb(124, 223, 124);
+}
+
+.loader {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	margin: auto;
+	margin-top: 15%;
+	-webkit-animation: spin 0.3s linear infinite; /* Safari */
+	animation: spin 0.3s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+
 .welcomeBackground {
 	width: 100%;
 	height: 100%;
